--- a/content/blog-one/index.mdx
+++ b/content/blog-one/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: "blog One title"
 description: "blog One description"
-image: "/images/perceptron/percept.jpg"
-publishAt: "2023-10-07"
+image: "../../public/blogs/charlesdeluvio-cZr2sgaxy3Q-unsplash.jpg"
+publishedAt: "2023-10-07"
 updatedAt: "2023-10-07"
 isPublished: true
 author: "Moon"
